force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>GO</fullName>
            </value>
            <value>
                <fullName>NO GO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>