force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__AppStore__c.field-meta.xml
<CustomField>
    <fullName>agf__AppStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used by the AppStore team to provide signoff</description>
    <label>AppStore</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoff2</relationshipName>
    <type>Lookup</type>
</CustomField>