force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__AppStore_Approval__c.field-meta.xml
<CustomField>
    <fullName>agf__AppStore_Approval__c</fullName>
    <description>This is used by the AppStore teams to provide the date when they signed off at Release Freeze</description>
    <label>AppStore Approval</label>
    <type>Date</type>
</CustomField>