force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build</label>
    <referenceTo>agf__ADM_Build__c</referenceTo>
    <relationshipLabel>Release Signoff</relationshipLabel>
    <relationshipName>Release_Signoff</relationshipName>
    <type>Lookup</type>
</CustomField>