force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Core__c.field-meta.xml
<CustomField>
    <fullName>agf__Core__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzW0MAI</relationshipName>
    <type>Lookup</type>
</CustomField>