force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Dev__c.field-meta.xml
<CustomField>
    <fullName>agf__Dev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineering Exec</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzRbMAI</relationshipName>
    <type>Lookup</type>
</CustomField>