force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Doc__c.field-meta.xml
<CustomField>
    <fullName>agf__Doc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzW1MAI</relationshipName>
    <type>Lookup</type>
</CustomField>