force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__L10N__c.field-meta.xml
<CustomField>
    <fullName>agf__L10N__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L10N</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzWFMAY</relationshipName>
    <type>Lookup</type>
</CustomField>