force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Platform__c.field-meta.xml
<CustomField>
    <fullName>agf__Platform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Platform</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzW5MAI</relationshipName>
    <type>Lookup</type>
</CustomField>