force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Platform_Approval__c.field-meta.xml
<CustomField>
    <fullName>agf__Platform_Approval__c</fullName>
    <label>Platform Approval</label>
    <type>Date</type>
</CustomField>