force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Product__c.field-meta.xml
<CustomField>
    <fullName>agf__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzWAMAY</relationshipName>
    <type>Lookup</type>
</CustomField>