force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__QA__c.field-meta.xml
<CustomField>
    <fullName>agf__QA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cross-Cloud Exec</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzTHMAY</relationshipName>
    <type>Lookup</type>
</CustomField>