force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__QE__c.field-meta.xml
<CustomField>
    <fullName>agf__QE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TQE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tziTMAQ</relationshipName>
    <type>Lookup</type>
</CustomField>