force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__QPD__c.field-meta.xml
<CustomField>
    <fullName>agf__QPD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quality, Performance and Docs</description>
    <label>QPD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoff</relationshipName>
    <type>Lookup</type>
</CustomField>