force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__QPD_Approval__c.field-meta.xml
<CustomField>
    <fullName>agf__QPD_Approval__c</fullName>
    <description>Date of QPD Approval</description>
    <label>QPD Approval</label>
    <type>Date</type>
</CustomField>