force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Release_Approved__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Approved__c</fullName>
    <label>Release Approved</label>
    <type>Date</type>
</CustomField>