force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__RM__c.field-meta.xml
<CustomField>
    <fullName>agf__RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RM_Signoff_User</relationshipName>
    <type>Lookup</type>
</CustomField>