force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Security__c.field-meta.xml
<CustomField>
    <fullName>agf__Security__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Security</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000u21OMAQ</relationshipName>
    <type>Lookup</type>
</CustomField>