force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Staggered_Release__c.field-meta.xml
<CustomField>
    <fullName>agf__Staggered_Release__c</fullName>
    <formula>$RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staggered Release</label>
    <type>Text</type>
</CustomField>