force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Systest__c.field-meta.xml
<CustomField>
    <fullName>agf__Systest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Performance Engineering (aka SysTest) signoff</description>
    <label>PerfEng</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzVqMAI</relationshipName>
    <type>Lookup</type>
</CustomField>