force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Tech_SVP__c.field-meta.xml
<CustomField>
    <fullName>agf__Tech_SVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Technology Sr. VP Signoff</description>
    <label>Tech SVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Signoff1</relationshipName>
    <type>Lookup</type>
</CustomField>