force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__Tech_SVP_Approval__c.field-meta.xml
<CustomField>
    <fullName>agf__Tech_SVP_Approval__c</fullName>
    <description>Date of Tech SVP Approval</description>
    <label>Tech SVP Approval</label>
    <type>Date</type>
</CustomField>