force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__TechOps__c.field-meta.xml
<CustomField>
    <fullName>agf__TechOps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TechOps</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000tzTgMAI</relationshipName>
    <type>Lookup</type>
</CustomField>