force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/fields/agf__UE_Approval__c.field-meta.xml
<CustomField>
    <fullName>agf__UE_Approval__c</fullName>
    <label>UX Approval</label>
    <type>Date</type>
</CustomField>