force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/recordTypes/agf__GUS.recordType-meta.xml
<RecordType>
    <fullName>agf__GUS</fullName>
    <active>true</active>
    <description>GUS</description>
    <label>GUS</label>
</RecordType>