force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/recordTypes/agf__R0.recordType-meta.xml
<RecordType>
    <fullName>agf__R0</fullName>
    <active>true</active>
    <label>R0</label>
</RecordType>