force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/recordTypes/agf__R2.recordType-meta.xml
<RecordType>
    <fullName>agf__R2</fullName>
    <active>true</active>
    <label>R2</label>
</RecordType>