force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/recordTypes/agf__Release_Freeze.recordType-meta.xml
<RecordType>
    <fullName>agf__Release_Freeze</fullName>
    <active>true</active>
    <description>This is the overall release signoff record</description>
    <label>Release Freeze</label>
</RecordType>