force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Signoff__c/recordTypes/agf__Sandbox.recordType-meta.xml
<RecordType>
    <fullName>agf__Sandbox</fullName>
    <active>true</active>
    <label>Sandbox</label>
</RecordType>